--- a/projeto/blog.html
+++ b/projeto/blog.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Blog - João da Silva</title>
     <meta charset="utf-8">
-    <title>Blog</title>
+    <link rel="icon" href="favicon.png">
   </head>
   <body>
+    <h1>Blog</h1>
     <h2>O essencial de design responsivo</h2>
 
     <p>Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?</p>
