--- a/projeto/blog.html
+++ b/projeto/blog.html
@@ -6,12 +6,12 @@
   <meta charset="utf-8">
   <link rel="icon" href="favicon.png">
   <link rel="stylesheet" href="site.css">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,600">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 </head>
 
 <body>
   <main>
-
-
     <h1>Blog</h1>
     <article>
 
@@ -38,6 +38,23 @@
 
     </article>
   </main>
+
+  <img src="eu.jpg" alt="Foto de João da Silva">
+  <aside>
+    <h1>João da Silva</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Porfolio</a></li>
+        <li><a href="bio.html">Sobre Mim</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </aside>
+  <footer>
+    &copy; João da Silva 2014
+  </footer>
 
 </body>
 
