--- a/projeto/blog.html
+++ b/projeto/blog.html
@@ -56,8 +56,13 @@
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>
+      <ul class="icones-sociais">
+        <li><a href="http://github.com/joaodasilva"><img src="github.png" alt="github"></a></li>
+        <li><a href="http://twitter.com/joaodasilva"><img src="twitter.png" alt="twitter"></a></li>
+        <li><a href="http://linkedin.com/joaodasilva"><img src="linkedin.png" alt="linkedin"></a></li>
+      </ul>
 		</aside>
-		<footer>
+		<footer id="rodape-pagina">
 			&copy; João da Silva 2014
 		</footer>
 	</body>
