Aula 9 - Nem tudo é o que parece - Nem tudo é o que parece

--- a/projeto/blog.html
+++ b/projeto/blog.html
@@ -61,19 +61,19 @@
     </nav>
     <ul class="icones-redes-sociais">
       <li>
-        <a href="https://github.com/joaodasilva">
-						<img src="github.png" alt="Github">
-					</a>
+        <a class="github" href="https://github.com/joaodasilva">
+          Github
+        </a>
       </li>
       <li>
-        <a href="https://twitter.com/joaodasilva">
-						<img src="twitter.png" alt="Twitter">
-					</a>
+        <a class="twitter" href="https://twitter.com/joaodasilva">
+          Twitter
+        </a>
       </li>
       <li>
-        <a href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
-						<img src="linkedin.png" alt="LinkedIn">
-					</a>
+        <a class="linkedin" href="https://br.linkedin.com/pub/joão-da-silva/32/4/508">
+          LinkedIn
+        </a>
       </li>
     </ul>
   </aside>
