--- a/projeto/blog.html
+++ b/projeto/blog.html
@@ -45,7 +45,7 @@
 				</article>
 			</div>
 		</main>
-		<img src="eu.jpg" alt="Foto de João da Silva" class="minha-foto">
+		<img src="img/eu.jpg" alt="Foto de João da Silva" class="minha-foto">
 		<aside class="navegacao-site">
 			<h1>João da Silva</h1>
 			<nav>
