--- a/projeto/formas_bordas.html
+++ b/projeto/formas_bordas.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Formas com Bordas</title>
-  <link rel="stylesheet" href="formas_bordas.css">
+  <link rel="stylesheet" href="css/formas_bordas.css">
 </head>
 
 <body>
